# otimizacao_antenas

./: README.md  algoritmo_genetico.py  cost_function.py  forca_bruta.py  funcao_objetivo.py  pyproject.toml
files/: cobertura_exemplo.xlsx  template_respostas.xlsx
notebooks/: prototipagem.ipynb
solutions/: resposta_ag.xlsx  resposta_fb.xlsx
