[tool.poetry]
name = "otimizacao-antenas"
version = "0.1.0"
description = ""
authors = ["Guilherme Prado <gui_prado@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.3"
pandas = "^2.2.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
